Additional commit - frontend

--- a/Calculator/calc.html
+++ b/Calculator/calc.html
@@ -27,7 +27,8 @@
       <button onclick="appendToDisplay('0')">0</button>
       <button onclick="appendToDisplay('.')">.</button>
       <button onclick="calculate()">=</button>
-      <button onclick="clearDisplay()" class="operation-btn">C</button>
+      <button onclick="clearDisplay()" class="operation-btn">AC</button>
+      <button onclick="clearDisplay()" class="operation-btn">del</button>
     </div>
   </div>
   <script src="./script.js"></script>
