--- a/Spiner/index.html
+++ b/Spiner/index.html
@@ -19,7 +19,7 @@
       background-color: #000;
       border-radius: 50%;
       border: 25px solid #fff;
-      border-top: 20px solid #0f8;
+      border-top: 20px solid yellow;
       animation: ani 2.5s linear infinite;
     }
     @keyframes ani {
