--- a/Canvas/canvas.html
+++ b/Canvas/canvas.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>Canvas</title>
@@ -31,7 +30,7 @@
       var hue = (rotationAngle + radius / v) * 360;
       return 'hsl(' + hue + ', 100%, 50%)';
     }
-    function animate () {
+    function animate() {
       ctx.clearRect(0, 0, cvs.width, cvs.height);
       rotationAngle += 0.009;
       for (var i = -n; i <= n; i++) {
@@ -41,16 +40,15 @@
           radius /= Math.sqrt(Math.abs(radius));
         }
         radius *= 0.48 * v;
-        var x = cvs.width / 2 + radius * Math.cos(Angle);
-        var y = cvs.height / 2 - radius * Math.sin(Angle);
+        var x = cvs.width / 2 + radius * Math.cos(angle);
+        var y = cvs.height / 2 - radius * Math.sin(angle);
         var color = getRandomColor(radius);
         drawCircle(x, y, color);
       }
       requestAnimationFrame(animate);
     }
-    requestAnimationFrame(animate);
-
+    animate();
   </script>
-  <link rel="stylesheet" href="./myscript.js">
+
 </body>
 </html>
