--- a/Js_anime projects/Circlez/index.html
+++ b/Js_anime projects/Circlez/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>Swing circles</title>
@@ -18,6 +17,7 @@
         frame(cvs, ctx, t);
         requestAnimationFrame(animate);
       }
+      animate();
     };
     function frame(cvs, ctx, t) {
       const W = cvs.width;
@@ -62,6 +62,7 @@
 
         ctx.beginPath();
         ctx.arc(cx, cy, r, 0, 2 * Math.PI);
+
         ctx.fill();
       }
       ctx.beginPath();
