--- a/My name/index.html
+++ b/My name/index.html
@@ -5,36 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My name</title>
-  <style>
-    .container {
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    span {
-      display: inline;
-      color: #0f6;
-      text-decoration: underline;
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      font-size: 22px;
-      transform: rotate(360deg);
-      animation: animate 4s linear infinite;
-    }
-    @keyframes animate {
-      0% {
-        transform: rotateY(360deg) scale(0);
-      }
-      50% {
-        transform: rotateX(0deg) scale(1);
-      }
-      100% {
-        transform: rotate(0deg) scale(3);
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -46,6 +17,14 @@
     <span>L</span>
     <span>A</span>
     <span>H</span>
+    <br>
+    <span>and</span>
+    <br>
+    <span>O</span>
+    <span>L</span>
+    <span>I</span>
+    <span>V</span>
+    <span>E</span>
   </div>
 </body>
 </html>
