New commit - spinner

--- a/Responsive login/index.html
+++ b/Responsive login/index.html
@@ -8,13 +8,27 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="container">
-    <form class="form">
-      <input type="text" placeholder="Username" class="user">
-      <input type="password" placeholder="password" class="pass">
-      <button>Login</button>
-    </form>
-  </div>
+  <header>
+    <div class="container">
+      <form class="form">
+        <h4>Login form </h4><br>
+          <label for="usr">Username</label>
+          <input type="text" placeholder="Username" class="user" id="usr">
+          <label for="pwd">Password</label>
+          <input type="password" placeholder="password" class="pass" id="pwd">
+          <input type="submit">
+          <button>Login</button>
+        </form>
+      </div>
+    </header>
+    <main>
+      <article>
+        <h1>Cxsulah programer</h1>
+        <p>
+          I love Jesus and programming as well.
+        </p>
+      </article>
+    </main>
 
-</body>
+  </body>
 </html>
