--- a/Loading/bars_loader/index.html
+++ b/Loading/bars_loader/index.html
@@ -20,19 +20,23 @@
       position: absolute;
       left: 8px;
       width: 16px;
-      background: #fff;
-      animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+      background: #0ff;
+      animation: lds-facebook 2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
     }
     .lds-facebook div:nth-child(1) {
       left: 8px;
+      animation-delay: -0.36s;
+    }
+    .lds-facebook div:nth-child(2) {
+      left: 32px;
       animation-delay: -0.24s;
     }
-    lds-facebook div:nth-child(2) {
-      left: 32px;
+    .lds-facebook div:nth-child(3) {
+      left: 56px;
       animation-delay: -0.12s;
     }
-    lds-facebook div:nth-child(3) {
-      left: 56px;
+    .lds-facebook div:nth-child(4) {
+      left: 80px;
       animation-delay: 0;
     }
 
@@ -44,12 +48,14 @@
       50%, 100% {
         top: 24px;
         height: 32px;
+        background-color: #ef0;
       }
     }
   </style>
 </head>
 <body>
   <div class="lds-facebook">
+    <div></div>
     <div></div>
     <div></div>
     <div></div>
