--- a/Star/index.html
+++ b/Star/index.html
@@ -16,7 +16,7 @@
       background-color: yellow;
       clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 78% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
       position: relative;
-      animation: shinning 2s infinite;
+      animation: shinning 2s infinite, rota 2s infinite;
     }
 
     @keyframes shinning {
@@ -29,6 +29,11 @@
       }
       100% {
         opacity: 0;
+      }
+    }
+    @keyframes rota {
+      100% {
+        transform: rotate(360deg);
       }
     }
   </style>
